--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ Django==4.2.27
 django-allauth==65.13.1
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
+gunicorn==23.0.0
 idna==3.11
+packaging==25.0
 psycopg2-binary==2.9.11
 requests==2.32.5
 sqlparse==0.5.4
