--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ djangorestframework==3.16.1
 gunicorn==23.0.0
 idna==3.11
 packaging==25.0
-psycopg2-binary==2.9.11
+psycopg2==2.9.11
 requests==2.32.5
 sqlparse==0.5.4
 tzdata==2025.2
