--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 asgiref==3.11.0
+black==25.12.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
 dj-database-url==0.5.0
 dj-rest-auth==7.0.1
 Django==4.2.27
 django-allauth==65.13.1
 django-cors-headers==4.5.0
 djangorestframework==3.16.1
+flake8==7.3.0
 gunicorn==23.0.0
 idna==3.11
+mccabe==0.7.0
+mypy_extensions==1.1.0
 packaging==25.0
+pathspec==0.12.1
+platformdirs==4.5.1
 psycopg2==2.9.11
+pycodestyle==2.14.0
+pyflakes==3.4.0
+pytokens==0.3.0
 requests==2.32.5
 sqlparse==0.5.4
 tzdata==2025.2
